♻️ [refactor] 불필요한 변수 제거